Fixed minor bugs: - Improved way to retrieve main class or interface from Compilation Unit (covers some corner cases where exceptions were being thrown) - Added 0.0 and 1.0 to global dictionary (different from 0 and 1, needed for some oracles) - Fixed getMethodSignature to consider case when comments are included in method signature